Show created datetime when editing DJ

--- a/trackman/templates/admin/djs.html
+++ b/trackman/templates/admin/djs.html
@@ -13,7 +13,7 @@
     </tr>
     <tr>
         <th>On-air Name</th>
-        <th>Name</th>
+        <th>Real Name</th>
         <th>Visible</th>
         <th>Actions</th>
     </tr>
