--- a/trackman/templates/admin/dj_edit.html
+++ b/trackman/templates/admin/dj_edit.html
@@ -86,6 +86,13 @@
         </div>
     </div>
 
+    <div class="form-group">
+        <label class="col-sm-3 control-label">Created</label>
+        <div class="col-sm-9">
+            <p class="form-control-static">{{ dj.time_added|datetime }}</p>
+        </div>
+    </div>
+
     <div class="form-actions">
         <button type="submit" class="btn btn-primary">
             <span class="glyphicon glyphicon-ok"></span>
