--- a/trackman/templates/admin/base.html
+++ b/trackman/templates/admin/base.html
@@ -32,6 +32,7 @@
                     {% if 'admin' in current_user_roles %}{% block nav_admin_roles %}<li><a href="{{ url_for('admin.roles') }}">Roles</a></li>{% endblock %}{% endif %}
                     {% if 'admin' in current_user_roles %}{% block nav_admin_djs %}<li><a href="{{ url_for('admin.djs') }}">DJs</a></li>{% endblock %}{% endif %}
                     {% if 'library' in current_user_roles %}{% block nav_admin_library %}<li><a href="{{ url_for('trackman_library.index') }}">Library</a></li>{% endblock %}{% endif %}
+                    {% if 'library' in current_user_roles %}{% block nav_admin_reports %}<li><a href="{{ url_for('admin.reports') }}">Reports</a></li>{% endblock %}{% endif %}
                 </ul>
                 <form action="{{ url_for('auth.logout') }}" method="post" class="navbar-form navbar-right">
                     <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}" />
